# project-euler

./: .gitignore  CMakeLists.txt  README.md
include/algos/: multiples_three_five.hpp
src/algos/: multiples_three_five.cpp
test/: main.cpp
test/algos/: multiples_three_five.cpp
